--- a/ipa/en.plist
+++ b/ipa/en.plist
@@ -9,7 +9,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://mdm.jinxixin.com:444/LexusH/IOS/LexusH.ipa</string>
+<string>http://testgms.oss-cn-shenzhen.aliyuncs.com/ipa/Lexus.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
