--- a/ipa/aa.plist
+++ b/ipa/aa.plist
@@ -22,7 +22,7 @@
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>LexusH</string>
+<string>GMS0414</string>
 </dict>
 </dict>
 </array>
