--- a/ipa/test.plist
+++ b/ipa/test.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yxlvban.oss-cn-shenzhen.aliyuncs.com/ipa/Houses.ipa</string>
+					<string>https://yxlvban.oss-cn-shenzhen.aliyuncs.com/ipa/HousesOld.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
